--- a/placeAPI.ipynb
+++ b/placeAPI.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyBOC6T8L4gqNrtE15LeyjsCoGEbLR5I5e4'"
+    "api_key = 'google API key'"
    ]
   },
   {
